add isort to hooks

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -137,6 +137,13 @@
     language: python
     types: [python]
     require_serial: true
+-   id: isort
+    name: Isort
+    description: This hook runs isort.
+    entry: isort
+    language: python
+    types: [python]
+    require_serial: true
 -   id: forbid-new-submodules
     name: Forbid new submodules
     language: python
